using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Plain : Ground
{
    public int resources;
}
