using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Lattice : MonoBehaviour
{
    public Ground ground;
    List<PlantOrgan> plantOrgans;
    public Vector2 position { get; private set; }
    private void _InfoDisplay();

}
