public enum PlantType{
    root,
    branch,
    fruit
}