public enum PlantOrganType{
    platformTree,
    obstacleThorn,
    harvestBushd,
    harvestVine
}